# manjavacas.github.io

./: 404.html  README.md  index.html  pyproject.toml  sitemap-0.xml
_next/static/HOk3ll14WBY9HipwP04-Y/: _buildManifest.js
_next/static/chunks/: 73271-31a247a29199842d.js
_next/static/chunks/pages/: _app-f2a45c34a2441e30.js  about-0bcee769f8069f65.js  contact-651e93eb86b207ef.js  index-fb12728eefce7b44.js  members-21ec7336bb1e83e5.js
_next/static/css/: b29cc8a339ed5b6d.css
about/: index.html
contact/: index.html
members/: index.html
web/: rxconfig.py
web/web/: web.py
