[tool.poetry]
name = "manjavacas-github-io"
version = "0.1.0"
description = ""
authors = ["Antonio <antomanjavacas@gmail.com>"]
readme = "README.md"
packages = [{include = "manjavacas"}]

[tool.poetry.dependencies]
python = "^3.10"
reflex = "^0.6.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
